SPECIFICATION/history/v009/scenarios.md
# scenarios.md — livespec-driver-claude

Gherkin scenarios for each Driver-owned contract path in `contracts.md`.
These are the worked examples the structural gate, the hook bundle, and
the resolution algorithm are checked against.

## Scenario: installed Driver exposes the eight /livespec:* commands

```gherkin
Given a project that enables livespec core and the livespec-driver-claude plugin
When the Claude Code runtime loads the Driver plugin
Then the eight slash commands /livespec:seed, /livespec:propose-change,
  /livespec:critique, /livespec:revise, /livespec:doctor,
  /livespec:prune-history, /livespec:next, and /livespec:help are available
And they are namespaced under the plugin name "livespec"
```

## Scenario: core-root resolution via operator override

```gherkin
Given the environment variable LIVESPEC_CORE_PLUGIN_ROOT is set to a core checkout
When a binding resolves <core-root>
Then it uses the override path
And it does not consult the governed-project or installed-cache fallbacks
```

## Scenario: core-root resolution falls back to the governed-project checkout

```gherkin
Given LIVESPEC_CORE_PLUGIN_ROOT is unset
And <project-root>/.claude-plugin/prose/ carries the complete core operation
    prose set — the dev / dogfooding case, loaded with --plugin-dir .
When a binding resolves <core-root>
Then it uses <project-root>/.claude-plugin/
```

## Scenario: core-root resolution rejects a non-core project checkout

```gherkin
Given LIVESPEC_CORE_PLUGIN_ROOT is unset
And the governed project ships its OWN plugin carrying a prose/ directory
And that prose/ does NOT hold the livespec core operation prose
And installed_plugins.json holds a livespec@livespec record whose projectPath
    equals the project root
When a binding resolves <core-root>
Then it does NOT use <project-root>/.claude-plugin/
And it uses that record's installPath
```

## Scenario: an incomplete core checkout fails rather than falling back

```gherkin
Given LIVESPEC_CORE_PLUGIN_ROOT is unset
And <project-root>/.claude-plugin/prose/ holds CORE-EXCLUSIVE operation prose
    but NOT the complete core operation prose set
And installed_plugins.json holds a livespec@livespec record whose projectPath
    equals the project root
When a binding resolves <core-root>
Then resolution FAILS and names the missing prose files
And it does NOT fall through to that record's installPath
```

## Scenario: the incomplete-checkout diagnostic names the recovery

```gherkin
Given resolution has failed because the core prose set is incomplete
When the diagnostic is emitted
Then it names LIVESPEC_CORE_PLUGIN_ROOT
And it states that the override is consulted BEFORE the completeness check
```

## Scenario: core-root resolution selects the install record for this project

```gherkin
Given LIVESPEC_CORE_PLUGIN_ROOT is unset
And the governed project is not the livespec core repo
And installed_plugins.json holds livespec@livespec records for SEVERAL projects
And the FIRST record in that array belongs to a DIFFERENT project
And one record's projectPath equals the project root
When a binding resolves <core-root>
Then it uses that record's installPath
And it does not use the first record's installPath
```

## Scenario: core-root resolution reports a projectPath mismatch as such

```gherkin
Given LIVESPEC_CORE_PLUGIN_ROOT is unset
And the governed project is not the livespec core repo
And installed_plugins.json holds livespec@livespec records
And no record's projectPath equals the project root
When a binding resolves <core-root>
Then it does not resolve <core-root>
And it reports that no install record exists for this project root
And it names the project roots that DO hold records
And it does not fall through to another project's record
And it does not report the condition as plugin staleness
```

## Scenario: an unreadable registry is not reported as core being uninstalled

```gherkin
Given LIVESPEC_CORE_PLUGIN_ROOT is unset
And the governed project is not the livespec core repo
And installed_plugins.json exists but cannot be read or parsed
When a binding resolves <core-root>
Then it does not resolve <core-root>
And it reports that the registry could not be read
And it does not instruct the operator to install livespec core
```

## Scenario: an absent registry yields the install instructions

```gherkin
Given LIVESPEC_CORE_PLUGIN_ROOT is unset
And the governed project is not the livespec core repo
And installed_plugins.json does not exist
When a binding resolves <core-root>
Then it does not resolve <core-root>
And it surfaces the livespec core install instructions
```

## Scenario: structural check rejects a SKILL.md invoking uv run

```gherkin
Given a SKILL.md whose fenced wrapper invocation uses "uv run"
When check_plugin_structure runs
Then it exits non-zero
And it emits a violation naming the file and line
```

## Scenario: structural check rejects the Driver's own plugin-root placeholder for core scripts

```gherkin
Given a SKILL.md whose fenced wrapper invocation resolves a bin/<name>.py
  through the Driver's own plugin-root placeholder
When check_plugin_structure runs
Then it exits non-zero
And it reports that the placeholder resolves to the Driver root, which has no scripts/
```

## Scenario: structural check rejects an extra or missing skill directory

```gherkin
Given the skills/ directory is missing one of the eight bindings, or carries an extra directory
When check_plugin_structure runs
Then it exits non-zero
And it names the missing or unexpected skill directory
```

## Scenario: marketplace description drift is rejected

```gherkin
Given marketplace.json's single plugin entry description differs from plugin.json's description
When check_plugin_structure runs
Then it exits non-zero
And it reports that the marketplace description must duplicate plugin.json's verbatim
```

## Scenario: auto-memory write in a governed project is intent-routed by the block-auto-memory hook

```gherkin
Given a governed project whose .livespec.jsonc declares an implementation.plugin
When an agent attempts Write to a path matching **/memory/*.md
Then the PreToolUse hook blocks the write
And the block reason routes trackable work to the active impl-plugin's capture-work-item skill
And the block reason routes spec-level rules to /livespec:propose-change
And the block reason routes durable agent guidance and conventions to AGENTS.md or a referenced .ai/<topic>.md file
And only genuinely session-only notes may be dropped
```

## Scenario: plan-artifact persistence warning on a bare assistant turn

```gherkin
Given the last assistant turn carried substantial planning artifacts above the thresholds
And no persisting tool call fired in the window
When the Stop hook runs
Then it emits a WARN
And it exits 0 without blocking
```

## Scenario: installed Driver refuses Playwright calls from a governed primary checkout

```gherkin
Given the Driver is installed in a livespec-governed Git repository
And the hook input cwd resolves to that repository's primary checkout
When any mcp__playwright__* tool is requested
Then the Driver's PreToolUse hook denies the call before Playwright runs
And no Playwright artifact is created in the primary checkout
But the same tool call from a linked worktree is allowed
```

## Scenario: commit at the primary checkout is refused

```gherkin
Given the current checkout's toplevel equals the configured livespec.primaryPath
When a commit or push is attempted
Then the commit-refuse hook exits 1
And it directs the contributor to use a worktree
```
